--- a/css/style-main.css
+++ b/css/style-main.css
@@ -1,3 +1,19 @@
+a {
+  text-decoration: none;
+}
+
+.border-radius-4 {
+  border-radius: 8px;
+}
+
+.decoration-none {
+  text-decoration: none;
+}
+
+.filter-white {
+  filter: invert(92%) sepia(99%) saturate(2%) hue-rotate(339deg)
+    brightness(103%) contrast(100%);
+}
 .body-login {
   height: 100%;
 }
