--- a/css/style-main.css
+++ b/css/style-main.css
@@ -65,3 +65,8 @@ svg {
 .report-selected {
   background-color: #dedede;
 }
+
+/* TABLE INPUT SAMPLE */
+.table-input-sample tbody td{
+  vertical-align: middle;
+}
