--- a/css/style-main.css
+++ b/css/style-main.css
@@ -1,3 +1,6 @@
+h2{
+  font-family: serif;
+}
 a {
   text-decoration: none;
 }
@@ -63,6 +66,12 @@ svg {
   width: 120;
   height: 120px;
   color: #dadef4;
+}
+
+.icon-check{
+  width: 80px;
+  height: 80px;
+  filter: invert(43%) sepia(34%) saturate(734%) hue-rotate(92deg) brightness(94%) contrast(89%);
 }
 
 /* REPORT */
