--- a/css/style-main.css
+++ b/css/style-main.css
@@ -39,8 +39,20 @@ svg {
 }
 
 /* name-responsive */
-@media screen and (max-width: 600px) and (min-width: 0px) {
+@media screen and (max-width: 768px) and (min-width: 0px) {
   .text-name {
+    display: none;
+  }
+  .text-name-responsive{
+    display: block;
+  }
+}
+@media screen and (min-width: 768px){
+  .text-name {
+    display: block;
+  }
+
+  .text-name-responsive {
     display: none;
   }
 }
