--- a/css/style-main.css
+++ b/css/style-main.css
@@ -90,6 +90,14 @@ svg {
   filter: invert(43%) sepia(34%) saturate(734%) hue-rotate(92deg) brightness(94%) contrast(89%);
 }
 
+/* WORKLIST */
+.img-empty{
+  width: 120px;
+  height: 120px;
+  filter: invert(43%) sepia(34%) saturate(734%) hue-rotate(92deg) brightness(94%) contrast(89%);
+}
+
+
 /* REPORT */
 .report-selected {
   background-color: #dedede;
